# practica-individual-os-ai-rse

./: CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  docker-compose.yml  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
docs/: index.md
papers/: 2.xml  3.xml  5.xml  6.xml  7.xml  8.xml
resultados/: enlaces.txt
scripts/: 1.xml  10.xml  4.xml  9.xml  figures.py  keywords.py  links.py
tests/: test_scripts.py
