[project]
name = "practica-individual-os-ai-rse"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Pérez"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rdflib (>=7.6.0,<8.0.0)"
]
package = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
