[tool.poetry]
name = "practica-individual-os-ai-rse"
version = "0.1.0"
description = ""
authors = ["Fernando Pérez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.10.8"
wordcloud = "^1.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
